Some more questions